Updating effective dates and dependencies.